Se agregaron las 4 paginas de Index Se agregaron los iconos Una pagina de Css para los botones del Index Hay navegabilidad entre paginas por medio de los index

--- a/ClinicaDental/UI_ClinicaDental/UI_ClinicaDental.csproj
+++ b/ClinicaDental/UI_ClinicaDental/UI_ClinicaDental.csproj
@@ -168,14 +168,27 @@
     <Content Include="BuscarUsuario.aspx" />
     <Content Include="CambiarClave.aspx" />
     <Content Include="Citas.aspx" />
+    <Content Include="Content\Botones.css" />
     <Content Include="Content\Estilos.css" />
     <Content Include="Diagnostico.aspx" />
+    <Content Include="Iconos\agregarPersona.png" />
+    <Content Include="Iconos\cita.png" />
+    <Content Include="Iconos\diagnostico.png" />
+    <Content Include="Iconos\editarPersona.png" />
+    <Content Include="Iconos\perfil.png" />
+    <Content Include="Iconos\reporte.png" />
+    <Content Include="Iconos\paciente.png" />
+    <Content Include="Iconos\usuario.png" />
     <Content Include="Imagenes\fondo.jpg" />
+    <Content Include="IndexAdminUsuarios.aspx" />
+    <Content Include="IndexPacientesD.aspx" />
+    <Content Include="IndexPacientesS.aspx" />
     <Content Include="IndexSecretaria.aspx" />
     <Content Include="InsertarPacienteD.aspx" />
     <Content Include="InsertarPacienteS.aspx" />
     <Content Include="InsertarUsuario.aspx" />
     <Content Include="Login.aspx" />
+    <Content Include="ModificarPacienteD.aspx" />
     <Content Include="ModificarPacienteS.aspx" />
     <Content Include="ModificarUsuario.aspx" />
     <Content Include="RecuperarPassword.aspx" />
@@ -312,6 +325,27 @@
       <DependentUpon>Diagnostico.aspx</DependentUpon>
     </Compile>
     <Compile Include="Encriptacion.cs" />
+    <Compile Include="IndexAdminUsuarios.aspx.cs">
+      <DependentUpon>IndexAdminUsuarios.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IndexAdminUsuarios.aspx.designer.cs">
+      <DependentUpon>IndexAdminUsuarios.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="IndexPacientesD.aspx.cs">
+      <DependentUpon>IndexPacientesD.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IndexPacientesD.aspx.designer.cs">
+      <DependentUpon>IndexPacientesD.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="IndexPacientesS.aspx.cs">
+      <DependentUpon>IndexPacientesS.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IndexPacientesS.aspx.designer.cs">
+      <DependentUpon>IndexPacientesS.aspx</DependentUpon>
+    </Compile>
     <Compile Include="IndexSecretaria.aspx.cs">
       <DependentUpon>IndexSecretaria.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -346,6 +380,13 @@
     </Compile>
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ModificarPacienteD.aspx.cs">
+      <DependentUpon>ModificarPacienteD.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ModificarPacienteD.aspx.designer.cs">
+      <DependentUpon>ModificarPacienteD.aspx</DependentUpon>
     </Compile>
     <Compile Include="ModificarPacienteS.aspx.cs">
       <DependentUpon>ModificarPacienteS.aspx</DependentUpon>
