Probando la nueva interfaz de gestion de citas..

--- a/ClinicaDental/UI_ClinicaDental/UI_ClinicaDental.csproj
+++ b/ClinicaDental/UI_ClinicaDental/UI_ClinicaDental.csproj
@@ -166,12 +166,31 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="BuscarUsuario.aspx" />
+    <Content Include="Scripts\calendarscript.js" />
     <Content Include="CambiarClave.aspx" />
     <Content Include="Citas.aspx" />
     <Content Include="Content\Botones.css" />
     <Content Include="Content\Estilos.css" />
+    <Content Include="css\cupertino\images\ui-bg_diagonals-thick_90_eeeeee_40x40.png" />
+    <Content Include="css\cupertino\images\ui-bg_flat_15_cd0a0a_40x100.png" />
+    <Content Include="css\cupertino\images\ui-bg_glass_100_e4f1fb_1x400.png" />
+    <Content Include="css\cupertino\images\ui-bg_glass_50_3baae3_1x400.png" />
+    <Content Include="css\cupertino\images\ui-bg_glass_80_d7ebf9_1x400.png" />
+    <Content Include="css\cupertino\images\ui-bg_highlight-hard_100_f2f5f7_1x100.png" />
+    <Content Include="css\cupertino\images\ui-bg_highlight-hard_70_000000_1x100.png" />
+    <Content Include="css\cupertino\images\ui-bg_highlight-soft_100_deedf7_1x100.png" />
+    <Content Include="css\cupertino\images\ui-bg_highlight-soft_25_ffef8f_1x100.png" />
+    <Content Include="css\cupertino\images\ui-icons_2694e8_256x240.png" />
+    <Content Include="css\cupertino\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="css\cupertino\images\ui-icons_3d80b3_256x240.png" />
+    <Content Include="css\cupertino\images\ui-icons_72a7cf_256x240.png" />
+    <Content Include="css\cupertino\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="css\cupertino\jquery-ui-1.7.3.custom.css" />
+    <Content Include="Default.aspx" />
     <Content Include="Diagnostico.aspx" />
     <Content Include="DiagnosticoS.aspx" />
+    <Content Include="fullcalendar\fullcalendar.css" />
+    <Content Include="fullcalendar\fullcalendar.min.js" />
     <Content Include="Iconos\agregarPersona.png" />
     <Content Include="Iconos\cita.png" />
     <Content Include="Iconos\diagnostico.png" />
@@ -189,6 +208,10 @@
     <Content Include="InsertarPacienteD.aspx" />
     <Content Include="InsertarPacienteS.aspx" />
     <Content Include="InsertarUsuario.aspx" />
+    <Content Include="jquery\jquery-1.3.2.min.js" />
+    <Content Include="jquery\jquery-ui-1.7.3.custom.min.js" />
+    <Content Include="jquery\jquery-ui-timepicker-addon-0.6.2.min.js" />
+    <Content Include="jquery\jquery.qtip-1.0.0-rc3.min.js" />
     <Content Include="Login.aspx" />
     <Content Include="ModificarPacienteD.aspx" />
     <Content Include="ModificarPacienteS.aspx" />
@@ -213,6 +236,7 @@
     <Content Include="Account\Web.config" />
     <Content Include="IndexDentista.aspx" />
     <Content Include="LoginDentista.Master" />
+    <Content Include="JsonResponse.ashx" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -304,6 +328,7 @@
     <Compile Include="BuscarUsuario.aspx.designer.cs">
       <DependentUpon>BuscarUsuario.aspx</DependentUpon>
     </Compile>
+    <Compile Include="CalendarEvent.cs" />
     <Compile Include="CambiarClave.aspx.cs">
       <DependentUpon>CambiarClave.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -317,6 +342,13 @@
     </Compile>
     <Compile Include="Citas.aspx.designer.cs">
       <DependentUpon>Citas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Diagnostico.aspx.cs">
       <DependentUpon>Diagnostico.aspx</DependentUpon>
@@ -333,6 +365,8 @@
       <DependentUpon>DiagnosticoS.aspx</DependentUpon>
     </Compile>
     <Compile Include="Encriptacion.cs" />
+    <Compile Include="EventDAO.cs" />
+    <Compile Include="ImproperCalendarEvent.cs" />
     <Compile Include="IndexAdminUsuarios.aspx.cs">
       <DependentUpon>IndexAdminUsuarios.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
