--- a/UI/bin/UI.dll.config
+++ b/UI/bin/UI.dll.config
@@ -4,11 +4,23 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  
+    
+  
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <appSettings>
+     <add key="CorreoElectronico" value="clinicadentaladmsys@gmail.com"/>
+
+    <add key="ClaveCorreo" value="joalexis12"/>
+    
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
+  
+
+   
+
+
 </configuration>
